--- a/frontend/src/SinglePage/singlepage.css
+++ b/frontend/src/SinglePage/singlepage.css
@@ -67,3 +67,23 @@ article .box2 p {
     flex-direction: column;
   }
 }
+
+
+input[type='submit'] {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+input[type='submit']:hover {
+  background-color: #3e8e41;
+}
+
